--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-webpack-plugin": "^3.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "2.8.1",
     "style-loader": "^3.3.1",
