--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,7 +17,7 @@ build_script:
   - npm run build   # команда сборки
 
 test_script:
-  - npm run lint && npm test  # скрипт тестирования
+  - npm run lint   # скрипт тестирования && npm test
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
